--- a/ThemeColor-Sample/Views/Cells/AccordionColorTableViewCell.xib
+++ b/ThemeColor-Sample/Views/Cells/AccordionColorTableViewCell.xib
@@ -18,30 +18,41 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="f4P-ci-qA1">
-                        <rect key="frame" x="32.5" y="0.0" width="268" height="76"/>
+                        <rect key="frame" x="47.5" y="5" width="238" height="66"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dsq-FT-tZC" customClass="ThemeColorTileView" customModule="ThemeColor_Sample" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="76" height="76"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <rect key="frame" x="0.0" y="0.0" width="66" height="66"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="dsq-FT-tZC" secondAttribute="height" id="WVI-95-WMz"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VMm-Dc-hYr" customClass="ThemeColorTileView" customModule="ThemeColor_Sample" customModuleProvider="target">
-                                <rect key="frame" x="96" y="0.0" width="76" height="76"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <rect key="frame" x="86" y="0.0" width="66" height="66"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kKF-Us-RJN" customClass="ThemeColorTileView" customModule="ThemeColor_Sample" customModuleProvider="target">
-                                <rect key="frame" x="192" y="0.0" width="76" height="76"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <rect key="frame" x="172" y="0.0" width="66" height="66"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
                             </view>
                         </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </stackView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QOz-0H-Jdp">
+                        <rect key="frame" x="15" y="75.5" width="303" height="0.5"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="0.5" id="ibt-V1-pKj"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="f4P-ci-qA1" secondAttribute="bottom" id="Cnu-Cm-3pU"/>
+                    <constraint firstAttribute="bottom" secondItem="f4P-ci-qA1" secondAttribute="bottom" constant="5" id="Cnu-Cm-3pU"/>
+                    <constraint firstAttribute="trailing" secondItem="QOz-0H-Jdp" secondAttribute="trailing" constant="15" id="HbA-Yl-E9l"/>
                     <constraint firstItem="f4P-ci-qA1" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="NKP-74-0vS"/>
-                    <constraint firstItem="f4P-ci-qA1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="xcM-qs-WL8"/>
+                    <constraint firstAttribute="bottom" secondItem="QOz-0H-Jdp" secondAttribute="bottom" id="bcM-LP-2bs"/>
+                    <constraint firstItem="QOz-0H-Jdp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="sXl-Zz-wcD"/>
+                    <constraint firstItem="f4P-ci-qA1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="xcM-qs-WL8"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -54,8 +65,8 @@
         </tableViewCell>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
