--- a/ThemeColor-Sample/Views/Storyboards/ThemeColor.storyboard
+++ b/ThemeColor-Sample/Views/Storyboards/ThemeColor.storyboard
@@ -36,11 +36,11 @@
                                             <constraint firstItem="Jxd-4T-Mob" firstAttribute="leading" secondItem="nfI-wP-0hj" secondAttribute="leading" constant="5" id="tNz-UR-rIX"/>
                                         </constraints>
                                     </view>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="qa5-1L-qPS">
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="qa5-1L-qPS">
                                         <rect key="frame" x="204.5" y="0.0" width="199.5" height="160"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FWq-zr-HV0" customClass="ThemeColorView" customModule="ThemeColor_Sample" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="199.5" height="77.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="199.5" height="97"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="サブ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tuj-bU-ebL">
                                                         <rect key="frame" x="5" y="5" width="37" height="21.5"/>
@@ -56,7 +56,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a42-HT-Y4I" customClass="ThemeColorView" customModule="ThemeColor_Sample" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="82.5" width="199.5" height="77.5"/>
+                                                <rect key="frame" x="0.0" y="102" width="199.5" height="58"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="アクセント" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pj4-cc-bc6">
                                                         <rect key="frame" x="5" y="5" width="82" height="19.5"/>
@@ -72,6 +72,9 @@
                                                 </constraints>
                                             </view>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstItem="FWq-zr-HV0" firstAttribute="height" secondItem="a42-HT-Y4I" secondAttribute="height" multiplier="5:3" id="JXS-gb-9rY"/>
+                                        </constraints>
                                     </stackView>
                                 </subviews>
                                 <constraints>
